--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,20 +1,34 @@
 body {
+  margin: 0 auto;
   max-width: 700px;
-  background: RGBA(168, 53, 53, 1.00);
+  background: black;
   color: white;
 }
 
-.title {
-  background: RGBA(196, 214, 176, 1.00);
-  text-align: center;
+.container {
+  width: 100%;
 }
 
+.title {
+  background: RGBA(38, 196, 133, 1.00);
+  color: RGBA(30, 40, 46, 1.00);
+  text-align: center;
+  font-size: 23px;
+}
 .audiocontainer {
-  background: RGBA(71, 121, 152, 1.00);
+  background: RGBA(38, 196, 133, 1.00);
+}
+
+audio {
+  margin: 4px;
+  margin-left: 4.5%;
+  width: 90%;
+
 }
 
 .searchcontainer {
-  background: RGBA(41, 31, 30, 1.00);
+  background: RGBA(135, 151, 175, 1.00);
+  margin: 0 auto;
 }
 
 .resultscontainer {
