Finished js - now to work on css

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -38,6 +38,11 @@ audio {
   width: 90%;
 }
 
+span {
+  display: none;
+}
+
+
 input {
   border-radius: 5px;
   height: 20px;
@@ -97,11 +102,6 @@ button {
   .artistsection  {
     width: 10%;
   }
-
-
-
-
-
 
 
 }
