Redoing CSS for project

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,80 +1,67 @@
 body {
-  margin: 0 auto;
-  max-width: 1100px;
-  background: black;
-  color: RGBA(30, 40, 46, 1); }
-
-.container {
-  width: 100%; }
+  background: RGBA(34, 34, 34, 1); }
 
 .title {
-  border-radius: 20px;
-  background: RGBA(45, 175, 245, 1);
-  color: RGBA(30, 40, 46, 1);
   text-align: center;
-  font-size: 23px; }
+  text-decoration: line-through;
+  background: black;
+  margin: 10px 20%;
+  padding: 20px;
+  border: 2px solid RGBA(114, 114, 114, 1);
+  border-top-right-radius: 40%;
+  border-top-left-radius: 60%;
+  border-bottom-left-radius: 60%;
+  border-bottom-right-radius: 40%; }
 
-.musiccontainer {
-  background: RGBA(45, 175, 245, 1); }
+.t1 {
+  color: RGBA(237, 20, 91, 1); }
 
-.searchcontainer {
-  margin-top: 10px;
-  margin-left: 20%; }
+.t2 {
+  color: RGBA(255, 103, 0, 1); }
 
-audio {
-  margin-top: 10px;
-  margin-left: 4.5%;
-  width: 90%; }
+.t3 {
+  color: RGBA(0, 119, 175, 1); }
 
-span {
-  display: none; }
+.t4 {
+  color: RGBA(0, 168, 122, 1); }
+
+.audiocontainer {
+  margin: 10px auto;
+  text-align: center; }
+
+.searchbar {
+  text-align: center; }
 
 input {
-  border-radius: 5px;
-  height: 20px; }
+  background: black;
+  color: RGBA(0, 168, 122, 1);
+  border: 1px solid RGBA(0, 119, 175, 1);
+  padding: 10px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px; }
 
 button {
-  background-color: RGBA(4, 85, 151, 1);
-  color: RGBA(30, 40, 46, 1);
-  border-radius: 5px; }
+  padding: 10px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background: RGBA(237, 20, 91, 1);
+  color: RGBA(0, 168, 122, 1);
+  border: 1px solid RGBA(0, 119, 175, 1);
+  font-weight: bolder; }
 
-.resultscontainer {
-  margin-left: 25%;
-  width: 50%;
-  overflow: auto;
-  background: RGBA(0, 141, 244, 1);
-  border-radius: 20px; }
-  .resultscontainer .artistsection {
-    margin-top: 20px;
-    margin-left: 13%;
-    width: 75%;
-    float: left;
-    background-color: RGBA(0, 100, 186, 1);
-    clear: both;
-    border-radius: 20px; }
-  .resultscontainer .artistsection img {
-    width: 100%;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px; }
-  .resultscontainer .artistsection p {
-    text-align: center;
-    width: 100%;
-    color: RGBA(30, 40, 46, 1);
-    background: RGBA(45, 175, 245, 1);
-    font-size: 12px; }
+.artistsection {
+  margin: 30px auto;
+  text-align: center;
+  border: 2px solid RGBA(237, 20, 91, 1); }
 
-@media screen and (min-width: 401px) and (max-width: 750px) {
-  body {
-    background: red; }
-  .resultscontainer {
-    margin: 0;
-    width: 100%;
-    float: left; }
-  .artistsection {
-    width: 10%; } }
+.artistsection span {
+  display: none; }
 
-/*  1. Why search button keeps refreshing
-    2. Why rwd doesn't work
-    3. Can't figure out audio src to only put one player at a time*/
+.artistsection img {
+  border: 2px solid RGBA(255, 103, 0, 1); }
+
+.artistsection p {
+  margin: 0;
+  color: white; }
 
 /*# sourceMappingURL=main.css.map */
