--- a/app/css/main.css
+++ b/app/css/main.css
@@ -50,6 +50,8 @@ button {
   font-weight: bolder; }
 
 .artistsection {
+  width: 50%;
+  padding: 30px;
   margin: 30px auto;
   text-align: center;
   border: 2px solid RGBA(237, 20, 91, 1); }
@@ -58,10 +60,23 @@ button {
   display: none; }
 
 .artistsection img {
+  width: 100%;
   border: 2px solid RGBA(255, 103, 0, 1); }
+  .artistsection img:hover {
+    opacity: .1;
+    cursor: pointer; }
 
 .artistsection p {
+  padding: 10px;
+  border: 3px solid RGBA(0, 119, 175, 1);
+  background: black;
   margin: 0;
-  color: white; }
+  color: white;
+  font-style: italic; }
+  .artistsection p:hover {
+    cursor: pointer;
+    color: RGBA(237, 20, 91, 1);
+    text-decoration: underline;
+    text-decoration-color: RGBA(237, 20, 91, 1); }
 
 /*# sourceMappingURL=main.css.map */
