--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,3 @@
-$defaultColor: RGBA(45, 175, 245, 1.00);
-$fontColor: RGBA(30, 40, 46, 1.00);
-
 body {
   background: RGBA(34, 34, 34, 1.00);
 }
@@ -64,6 +61,8 @@ button {
 
 
 .artistsection {
+  width: 50%;
+  padding: 30px;
   margin: 30px auto;
   text-align: center;
   border: 2px solid RGBA(237, 20, 91, 1.00);
@@ -74,10 +73,27 @@ button {
 }
 
 .artistsection img {
+  width: 100%;
   border: 2px solid RGBA(255, 103, 0, 1.00);
+
+  &:hover {
+    opacity: .1;
+    cursor: pointer;
+  }
 }
 
 .artistsection p {
+  padding: 10px;
+  border: 3px solid RGBA(0, 119, 175, 1.00);
+  background: black;
   margin: 0;
   color: white;
+  font-style: italic;
+
+  &:hover {
+    cursor: pointer;
+    color: RGBA(237, 20, 91, 1.00);
+    text-decoration: underline;
+    text-decoration-color: RGBA(237, 20, 91, 1.00);
+  }
 }
